--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.show-sql=true
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/systemRH?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=junior12
 server.port=8081
 #spring.jpa.hibernate.ddl-auto=create
