--- a/controller/build.gradle
+++ b/controller/build.gradle
@@ -2,4 +2,5 @@ dependencies {
     implementation project(':service')
     implementation project(':model')
     implementation project(':repository')
+    implementation project(':apiCep')
 }
