--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ allprojects {
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
         implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
+        //implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
+        //  implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.5.2'
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.2'
         compileOnly 'org.projectlombok:lombok:1.18.20'
         runtimeOnly 'org.postgresql:postgresql:42.2.23.jre7'
